# backlog-cli

./: AGENTS.md  Cargo.toml  README.ja.md  README.md  install.ps1  install.sh  mise.toml  uninstall.ps1  uninstall.sh
.claude/skills/creating-issue/: SKILL.md
.claude/skills/developing/: SKILL.md
.claude/skills/implementing-backlog-feature/: SKILL.md
.claude/skills/implementing-issue/: SKILL.md
.cspell/dicts/: base.txt  project.txt
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/workflows/: check-rust.yml  docs.yml  release.yml
docs/: PATTERNS.md  TESTING.md  VALIDATION.md  user-guide.ja.md  user-guide.md
mise/tasks/: release
src/: config.rs  logger.rs  main.rs  oauth.rs  secret.rs
src/api/: activity.rs  disk_usage.rs  document.rs  git.rs  issue.rs  licence.rs  mod.rs  notification.rs  priority.rs  project.rs  pull_request.rs  rate_limit.rs  resolution.rs  shared_file.rs  space.rs  space_notification.rs  team.rs  user.rs  watch.rs  wiki.rs
src/cmd/: activity_shared.rs  auth.rs  banner.rs  mod.rs  project.rs  rate_limit.rs  space.rs
src/cmd/document/: create.rs  delete.rs  list.rs  mod.rs  show.rs  tree.rs
src/cmd/git/: list.rs  mod.rs  show.rs
src/cmd/issue/: count.rs  create.rs  delete.rs  list.rs  mod.rs  show.rs  update.rs
src/cmd/notification/: count.rs  list.rs  mod.rs  read.rs  reset_unread.rs
src/cmd/pr/: count.rs  create.rs  list.rs  (+3 more)
website/: docusaurus.config.js  package.json  pnpm-lock.yaml  sidebars.js
website/docs/: authentication.md  commands.md  configuration.md  index.md  installation.md  troubleshooting.md
(+127 files in other folders)
