[package]
name = "bl"
version = "0.2.0"
edition = "2024"
license = "MIT OR Apache-2.0"
authors = ["okkey"]

[[bin]]
name = "bl"
path = "src/main.rs"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
dirs = "5"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
rpassword = "7"
keyring = { version = "3", default-features = false, features = ["async-secret-service", "crypto-rust"] }
anstream = "0.6"
owo-colors = "4"

[target.'cfg(windows)'.dependencies]
keyring = { version = "3", features = ["windows-native"] }

[dev-dependencies]
httpmock = { version = "0.7", default-features = false }
tempfile = "3"
